--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,8 @@ params {
     // Databases
     k2nt_db = ''
     mash_dataset = ''
+    // tools
+    krakentools_extract = ''
 
     // Output
     output = './results'
