adding process amrfinderplus - not tested

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -39,4 +39,16 @@ process {
         module = 'bioinfo/BUSCO/5.2.2'
     }
 
+    withName: mash {
+      cpus = '2'
+      time = '24h'
+      module = 'bioinfo/mash/2.2'
+    }
+
+    withName amrfinderplus {
+      cpus = '2'
+      time = '24h'
+      module = 'system/Miniconda3/1.0'
+    }
+
 }
