adding CARD module for ARGs detection

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -51,4 +51,10 @@ process {
       module = 'system/Miniconda3/1.0'
     }
 
+    withName card_rgi {
+      cpus = '2'
+      time = '24h'
+      module = 'system/Miniconda3/1.0'
+    }
+
 }
