--- a/nextflow.config
+++ b/nextflow.config
@@ -14,6 +14,7 @@ params {
 
     // Databases
     k2nt_db = ''
+    card_db = ''
     mash_dataset = ''
     // tools
     krakentools_extract = ''
