--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -31,6 +31,8 @@ process {
         cpus = '2'
         time = '24h'
         module = 'bioinfo/quast/5.0.2'
+        module = 'bioinfo/bedtools/2.30.0'
+        module = 'bioinfo/minimap2/2.24'
     }
 
     withName: busco {
@@ -45,13 +47,13 @@ process {
       module = 'bioinfo/mash/2.2'
     }
 
-    withName amrfinderplus {
+    withName: amrfinderplus {
       cpus = '2'
       time = '24h'
       module = 'system/Miniconda3/1.0'
     }
 
-    withName card_rgi {
+    withName: card_rgi {
       cpus = '2'
       time = '24h'
       module = 'system/Miniconda3/1.0'
