fixing the usage of existing conda envs for CARD and AMRFinderPlus

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -30,9 +30,7 @@ process {
     withName: quast {
         cpus = '2'
         time = '24h'
-        module = 'bioinfo/quast/5.0.2'
-        module = 'bioinfo/bedtools/2.30.0'
-        module = 'bioinfo/minimap2/2.24'
+        module = 'system/python/3.7.2:bioinfo/quast/5.0.2:bioinfo/bedtools/2.30.0:bioinfo/minimap2/2.24'
     }
 
     withName: busco {
