--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,9 @@ params {
     mash_dataset = ''
     // tools
     krakentools_extract = ''
+    //conda envs
+    conda_card = ''
+    conda_amrfinder = ''
 
     // Output
     output = './results'
