CARD RGI and AMRFinderPlus as local conda envs, hard paths of conda envs in module files. Did not manage as params

--- a/nextflow.config
+++ b/nextflow.config
@@ -18,9 +18,10 @@ params {
     mash_dataset = ''
     // tools
     krakentools_extract = ''
+
     //conda envs
-    conda_card = ''
     conda_amrfinder = ''
+    conda_card_rgi = ''
 
     // Output
     output = './results'
