--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -4,6 +4,9 @@ docker {
 conda {
     enabled = true
 }
+singularity {
+    enabled = true
+}
 
 process {
     executor = 'slurm'
@@ -26,12 +29,18 @@ process {
         time = '24h'
         module = 'bioinfo/kraken2/2.1.1'
     }
+    withName: extract_kraken {
+        cpus = '2'
+        time = '4h'
+        module = 'system/python/3.8.12'
+    }
 
     withName: quast {
         cpus = '2'
         time = '24h'
-        module = 'system/python/3.7.2:bioinfo/quast/5.0.2:bioinfo/bedtools/2.30.0:bioinfo/minimap2/2.24'
+        container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
     }
+    //module = 'bioinfo/quast/5.0.2:bioinfo/bedtools/2.30.0:bioinfo/minimap2/2.24'
 
     withName: busco {
         cpus = '2'
@@ -56,5 +65,7 @@ process {
       time = '24h'
       module = 'system/Miniconda3/1.0'
     }
-
+  //  module = 'system/singularity/3.6.0'
+  //  container = 'docker://quay.io/biocontainers/rgi:5.2.0--pyhdfd78af_0'
+    //conda = '/home/hayer/.conda/envs/rgi'
 }
