putting busco as singularity container, adding process busco_auto_prok to run auto-lineage-proka if not busco lineage is provided

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -45,7 +45,13 @@ process {
     withName: busco {
         cpus = '2'
         time = '24h'
-        module = 'bioinfo/BUSCO/5.2.2'
+        container = 'docker://quay.io/biocontainers/busco:5.2.2--pyhdfd78af_0'
+    }
+
+    withName: busco_auto_prok {
+        cpus = '2'
+        time = '24h'
+        container = 'docker://quay.io/biocontainers/busco:5.2.2--pyhdfd78af_0'
     }
 
     withName: mash {
