--- a/nextflow.config
+++ b/nextflow.config
@@ -16,6 +16,10 @@ params {
     k2nt_db = ''
     card_db = ''
     mash_dataset = ''
+
+    //species Options
+    busco_lineage = null
+
     // tools
     krakentools_extract = ''
 
