--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -91,4 +91,18 @@ process {
       time = '24h'
       container = 'docker://quay.io/biocontainers/mlst:2.22.0--hdfd78af_0'
     }
+
+    withName: bakta {
+      cpus = '2'
+      time = '24h'
+  //    module = 'system/Miniconda3/1.0'
+      container = 'docker://quay.io/biocontainers/bakta:1.4.0--pyhdfd78af_1'
+    }
+
+    withName: prokka {
+      cpus = '2'
+      time = '24h'
+      container = 'docker://quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
+    }
+
 }
