--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -74,8 +74,9 @@ process {
     withName: card_rgi {
       cpus = '2'
       time = '24h'
-      module = 'system/Miniconda3/1.0'
+      module = 'system/Miniconda3/1.0'      
     }
+    //container = 'docker://quay.io/biocontainers/rgi:5.1.1--py_0'
   //  module = 'system/singularity/3.6.0'
   //  container = 'docker://quay.io/biocontainers/rgi:5.2.0--pyhdfd78af_0'
     //conda = '/home/hayer/.conda/envs/rgi'
