dealing with phred64 in fastp adding param phred_type - BGI reads in phred64

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,9 @@ params {
     // Inputs
     illumina = './illumina'
 
+    // phred
+    phred_type = '33'
+    
     // Databases
     k2nt_db = ''
     card_db = ''
