fixed pipeline for input contigs.fasta

--- a/nextflow.config
+++ b/nextflow.config
@@ -10,11 +10,12 @@ params {
     profile = false
 
     // Inputs
-    illumina = './illumina'
+//    illumina = './illumina'
+//    contigs = './contigs'
 
     // phred
     phred_type = '33'
-    
+
     // Databases
     k2nt_db = ''
     card_db = ''
