added the management of index CSV file input for hybrid assembly illumina-ONT with unicycler

--- a/conf/singu.config
+++ b/conf/singu.config
@@ -24,6 +24,13 @@ process {
         container = 'docker://quay.io/biocontainers/spades:3.15.5--h95f258a_1'
     }
 
+    withName: unicycler {
+        cpus = '8'
+        memory = '4g'
+        time = '24h'
+        container = 'docker://quay.io/biocontainers/unicycler:0.5.0--py310hc8f18ef_2'
+    }
+
     withName: kraken2nt_contigs {
         cpus = '4'
         time = '24h'
