added kma in output dir for PF

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -23,6 +23,13 @@ process {
         time = '24h'
         module = 'bioinfo/SPAdes/3.14.1'
     }
+    withName: unicycler {
+        cpus = '8'
+        memory = '4g'
+        time = '24h'
+        module = 'bioinfo/unicycler/0.4.4'
+      //  container = 'docker://quay.io/biocontainers/unicycler:0.5.0--py310hc8f18ef_2'
+    }
 
     withName: kraken2nt_contigs {
         cpus = '4'
@@ -74,12 +81,8 @@ process {
     withName: card_rgi {
       cpus = '2'
       time = '24h'
-      module = 'system/Miniconda3/1.0'
+      module = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
     }
-    //container = 'docker://quay.io/biocontainers/rgi:5.1.1--py_0'
-  //  module = 'system/singularity/3.6.0'
-  //  container = 'docker://quay.io/biocontainers/rgi:5.2.0--pyhdfd78af_0'
-    //conda = '/home/hayer/.conda/envs/rgi'
 
     withName: plasmidfinder {
       cpus = '2'
