added fastp_hybrid process for the SR when hybrid input

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -16,6 +16,11 @@ process {
         time = '4h'
         module = 'bioinfo/fastp/0.20.1'
     }
+    withName: fastp_hybrid {
+        cpus = '4'
+        time = '4h'
+        module = 'bioinfo/fastp/0.20.1'
+    }
 
     withName: spades {
         cpus = '8'
