--- a/conf/singu.config
+++ b/conf/singu.config
@@ -16,6 +16,11 @@ process {
         time = '4h'
         container = 'docker://quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
     }
+    withName: fastp_hybrid {
+        cpus = '4'
+        time = '4h'
+        container = 'docker://quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
+    }
 
     withName: spades {
         cpus = '8'
