adding platon process

--- a/conf/singu.config
+++ b/conf/singu.config
@@ -99,6 +99,12 @@ process {
       container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
     }
 
+    withName: platon {
+      cpus = '2'
+      time = '24h'
+      container = 'docker://quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
+    }
+
     withName: mlst {
       cpus = '2'
       time = '24h'
