--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,8 @@ params {
     // Databases
     k2nt_db = ''
     card_db = ''
+    plasmidfinder_db = ''
+    platon_db = ''
     mash_dataset = ''
 
     //species Options
@@ -26,10 +28,6 @@ params {
 
     // tools
     krakentools_extract = ''
-
-    //conda envs
-    conda_amrfinder = ''
-    conda_card_rgi = ''
 
     // Output
     output = './results'
@@ -40,6 +38,9 @@ profiles {
     //executer
     itrop {
         includeConfig 'conf/itrop.config'
+    }
+    singu {
+        includeConfig 'conf/singu.config'
     }
 
 }
