--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -103,6 +103,12 @@ process {
       time = '24h'
       container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
     }
+    
+    withName: platon {
+      cpus = '2'
+      time = '24h'
+      container = 'docker://quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
+    }
 
     withName: mlst {
       cpus = '2'
