added roary process on collect of prokka

--- a/conf/singu.config
+++ b/conf/singu.config
@@ -117,4 +117,10 @@ process {
       container = 'docker://quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
     }
 
+    withName: roary {
+      cpus = '4'
+      time = '24h'
+      container = 'docker://sangerpathogens/roary:trusty'
+    }
+
 }
