--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -103,7 +103,7 @@ process {
       time = '24h'
       container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
     }
-    
+
     withName: platon {
       cpus = '2'
       time = '24h'
@@ -127,6 +127,13 @@ process {
       cpus = '2'
       time = '24h'
       container = 'docker://quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
+    }
+
+    withName: roary {
+      cpus = '4'
+      time = '24h'
+      module = 'bioinfo/roary/3.12.0'
+    //  container = 'docker://sangerpathogens/roary:trusty'
     }
 
 }
