added compilation of amrfinder results

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -92,6 +92,12 @@ process {
       container = 'docker://quay.io/wslh-bioinformatics/spriggan-amrfinder:3.10.1'
     }
 
+    withName: compile_amrfinder {
+        cpus = '2'
+        time = '4h'
+        module = 'system/python/3.8.12'
+    }
+
     withName: card_rgi {
       cpus = '2'
       time = '24h'
