--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -110,6 +110,12 @@ process {
       container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
     }
 
+    withName: compile_plasmidfinder {
+        cpus = '2'
+        time = '4h'
+        module = 'system/python/3.8.12'
+    }
+
     withName: platon {
       cpus = '2'
       time = '24h'
@@ -141,5 +147,6 @@ process {
       module = 'bioinfo/roary/3.12.0'
     //  container = 'docker://sangerpathogens/roary:trusty'
     }
+
 
 }
