--- a/conf/singu.config
+++ b/conf/singu.config
@@ -2,7 +2,7 @@ docker {
     enabled = false
 }
 conda {
-    enabled = true
+    enabled = false
 }
 singularity {
     enabled = true
@@ -44,7 +44,7 @@ process {
     withName: extract_kraken {
         cpus = '2'
         time = '4h'
-        module = 'system/python/3.8.12'
+  //      module = 'system/python/3.8.12'
     }
 
     withName: quast {
