added card heatmap process

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -104,6 +104,12 @@ process {
       container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
     }
 
+    withName: compile_card {
+      cpus = '2'
+      time = '4h'
+      container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
+    }
+
     withName: plasmidfinder {
       cpus = '2'
       time = '24h'
