cleaned main and added option for local DB for AMRFinder

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,7 @@ params {
     // Databases
     k2nt_db = ''
     card_db = ''
+    amrfinder_db = ''
     plasmidfinder_db = ''
     platon_db = ''
     mash_dataset = ''
