--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -83,13 +83,13 @@ process {
     withName: amrfinderplus {
       cpus = '2'
       time = '24h'
-      container = 'docker://quay.io/wslh-bioinformatics/spriggan-amrfinder:3.10.1'
+      container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
     }
 
     withName: amrfinderplus_no_species {
       cpus = '2'
       time = '24h'
-      container = 'docker://quay.io/wslh-bioinformatics/spriggan-amrfinder:3.10.1'
+      container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
     }
 
     withName: compile_amrfinder {
