added Bakta for annotation, and put prokka optional if Batka DB is provided

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -112,7 +112,7 @@ process {
 
     withName: plasmidfinder {
       cpus = '2'
-      time = '24h'
+      time = '4h'
       container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
     }
 
@@ -124,8 +124,14 @@ process {
 
     withName: platon {
       cpus = '2'
-      time = '24h'
+      time = '4h'
       container = 'docker://quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
+    }
+
+    withName: mefinder {
+      cpus = '2'
+      time = '4h'
+      container = 'docker://mkhj/mobile_element_finder:1.0.3'
     }
 
     withName: mlst {
@@ -139,6 +145,12 @@ process {
       time = '24h'
   //    module = 'system/Miniconda3/1.0'
       container = 'docker://quay.io/biocontainers/bakta:1.4.0--pyhdfd78af_1'
+    }
+
+    withName: bakta {
+      cpus = '2'
+      time = '24h'
+      container = 'docker://oschwengers/bakta:v1.6.0'
     }
 
     withName: prokka {
