--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,7 @@ params {
 
     // Databases
     k2nt_db = ''
+    params.bakta_db = ''
     card_db = ''
     amrfinder_db = ''
     plasmidfinder_db = ''
