--- a/conf/singu.config
+++ b/conf/singu.config
@@ -101,20 +101,32 @@ process {
 
     withName: plasmidfinder {
       cpus = '2'
-      time = '24h'
+      time = '4h'
       container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
     }
 
     withName: platon {
       cpus = '2'
-      time = '24h'
+      time = '4h'
       container = 'docker://quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
+    }
+
+    withName: mefinder {
+      cpus = '2'
+      time = '4h'
+      container = 'docker://mkhj/mobile_element_finder:1.0.3'
     }
 
     withName: mlst {
       cpus = '2'
       time = '24h'
       container = 'docker://quay.io/biocontainers/mlst:2.22.0--hdfd78af_0'
+    }
+
+    withName: bakta {
+      cpus = '2'
+      time = '24h'
+      container = 'docker://oschwengers/bakta:v1.6.0'
     }
 
     withName: prokka {
