alphabetical order + add agat and emblmygff3

--- a/conf/singu.config
+++ b/conf/singu.config
@@ -10,17 +10,137 @@ singularity {
 
 process {
     executor = 'slurm'
+		withName: extract_kraken {
+        cpus = '2'
+        time = '4h'
+  //      module = 'system/python/3.8.12'
+    }
+
+		withName: agat {
+			cpus = '1'
+			time = '4h'
+			container = 'docker://quay.io/biocontainers/agat:1.0.0--pl5321hdfd78af_0'
+		}
+
+		withName: amrfinderplus {
+			cpus = '2'
+			time = '24h'
+			container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
+		}
+
+		withName: amrfinderplus_no_species {
+			cpus = '2'
+			time = '24h'
+			container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
+		}
+
+		withName: bakta {
+      cpus = '2'
+      time = '24h'
+      container = 'docker://oschwengers/bakta:v1.6.0'
+    }
+
+		withName: card_rgi {
+			cpus = '2'
+			time = '24h'
+			container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
+		}
+
+		withName: compile_card {
+			cpus = '2'
+			time = '4h'
+			container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
+		}
+
+		withName: busco {
+				cpus = '2'
+				time = '24h'
+				container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
+		}
+
+		withName: busco_auto_prok {
+				cpus = '2'
+				time = '24h'
+				container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
+		}
+
+		withName: emblmygff3 {
+			cpus = '1'
+			time = '4h'
+			container = 'docker://quay.io/biocontainers/emblmygff3:2.2--pyhdfd78af_1'
+		}
 
     withName: fastp {
         cpus = '4'
         time = '4h'
         container = 'docker://quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
     }
+
     withName: fastp_hybrid {
         cpus = '4'
         time = '4h'
         container = 'docker://quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
     }
+
+		withName: kraken2nt_contigs {
+        cpus = '4'
+        time = '24h'
+        container = 'docker://quay.io/biocontainers/kraken2:2.1.2--pl5321h7d875b9_1'
+    }
+
+		withName: mefinder {
+      cpus = '2'
+      time = '4h'
+      container = 'docker://mkhj/mobile_element_finder:1.0.3'
+    }
+
+		withName: mlst {
+			cpus = '2'
+			time = '24h'
+			container = 'docker://quay.io/biocontainers/mlst:2.22.0--hdfd78af_0'
+		}
+
+		withName: plasmidfinder {
+      cpus = '2'
+      time = '4h'
+      container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
+    }
+
+    withName: platon {
+      cpus = '2'
+      time = '4h'
+      container = 'docker://quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
+    }
+
+		withName: prokka {
+			cpus = '2'
+			time = '24h'
+			container = 'docker://quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
+		}
+
+		withName: quast {
+				cpus = '4'
+				time = '24h'
+				container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
+		}
+
+		withName: quast_contigs_only {
+				cpus = '4'
+				time = '24h'
+				container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
+		}
+
+		withName: quast_hybrid {
+				cpus = '4'
+				time = '24h'
+				container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
+		}
+
+		withName: roary {
+			cpus = '4'
+			time = '24h'
+			container = 'docker://sangerpathogens/roary:trusty'
+		}
 
     withName: spades {
         cpus = '8'
@@ -35,110 +155,4 @@ process {
         time = '24h'
         container = 'docker://quay.io/biocontainers/unicycler:0.5.0--py310hc8f18ef_2'
     }
-
-    withName: kraken2nt_contigs {
-        cpus = '4'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/kraken2:2.1.2--pl5321h7d875b9_1'
-    }
-    withName: extract_kraken {
-        cpus = '2'
-        time = '4h'
-  //      module = 'system/python/3.8.12'
-    }
-
-    withName: quast {
-        cpus = '4'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
-    }
-    withName: quast_contigs_only {
-        cpus = '4'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
-    }
-    withName: quast_hybrid {
-        cpus = '4'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
-    }
-
-    withName: busco {
-        cpus = '2'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
-    }
-
-    withName: busco_auto_prok {
-        cpus = '2'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
-    }
-
-    withName: amrfinderplus {
-      cpus = '2'
-      time = '24h'
-      container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
-    }
-
-    withName: amrfinderplus_no_species {
-      cpus = '2'
-      time = '24h'
-      container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
-    }
-
-    withName: card_rgi {
-      cpus = '2'
-      time = '24h'
-      container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
-    }
-
-    withName: compile_card {
-      cpus = '2'
-      time = '4h'
-      container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
-    }
-
-    withName: plasmidfinder {
-      cpus = '2'
-      time = '4h'
-      container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
-    }
-
-    withName: platon {
-      cpus = '2'
-      time = '4h'
-      container = 'docker://quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
-    }
-
-    withName: mefinder {
-      cpus = '2'
-      time = '4h'
-      container = 'docker://mkhj/mobile_element_finder:1.0.3'
-    }
-
-    withName: mlst {
-      cpus = '2'
-      time = '24h'
-      container = 'docker://quay.io/biocontainers/mlst:2.22.0--hdfd78af_0'
-    }
-
-    withName: bakta {
-      cpus = '2'
-      time = '24h'
-      container = 'docker://oschwengers/bakta:v1.6.0'
-    }
-
-    withName: prokka {
-      cpus = '2'
-      time = '24h'
-      container = 'docker://quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
-    }
-
-    withName: roary {
-      cpus = '4'
-      time = '24h'
-      container = 'docker://sangerpathogens/roary:trusty'
-    }
-
 }
