Use label to factorize code, and factorize compile_card and card.nf

--- a/conf/singu.config
+++ b/conf/singu.config
@@ -22,13 +22,7 @@ process {
 			container = 'docker://quay.io/biocontainers/agat:1.0.0--pl5321hdfd78af_0'
 		}
 
-		withName: amrfinderplus {
-			cpus = '2'
-			time = '24h'
-			container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
-		}
-
-		withName: amrfinderplus_no_species {
+		withLabel: amrfinderplus {
 			cpus = '2'
 			time = '24h'
 			container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
@@ -40,28 +34,16 @@ process {
       container = 'docker://oschwengers/bakta:v1.6.0'
     }
 
-		withName: card_rgi {
+		withLabel: busco {
+				cpus = '2'
+				time = '24h'
+				container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
+		}
+
+		withLabel: card {
 			cpus = '2'
 			time = '24h'
 			container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
-		}
-
-		withName: compile_card {
-			cpus = '2'
-			time = '4h'
-			container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
-		}
-
-		withName: busco {
-				cpus = '2'
-				time = '24h'
-				container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
-		}
-
-		withName: busco_auto_prok {
-				cpus = '2'
-				time = '24h'
-				container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
 		}
 
 		withName: emblmygff3 {
@@ -118,19 +100,13 @@ process {
 			container = 'docker://quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
 		}
 
-		withName: quast {
-				cpus = '4'
+		withLabel: python3.9 {
+				cpus = '2'
 				time = '24h'
-				container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
+				container = 'docker://python:3.9.6-bullseye'
 		}
 
-		withName: quast_contigs_only {
-				cpus = '4'
-				time = '24h'
-				container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
-		}
-
-		withName: quast_hybrid {
+		withLabel: quast {
 				cpus = '4'
 				time = '24h'
 				container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
