add label python3 to all processes needing it

--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -2,7 +2,7 @@ docker {
     enabled = false
 }
 conda {
-    enabled = true
+    enabled = false
 }
 singularity {
     enabled = true
@@ -31,19 +31,14 @@ process {
     withName: unicycler {
         cpus = '8'
         memory = '4g'
-        time = '24h'
-        module = 'bioinfo/unicycler/0.4.4'
+        time = '96h'
+        module = 'bioinfo/unicycler/0.4.4:bioinfo/racon/1.4.3'
     }
 
     withName: kraken2nt_contigs {
         cpus = '4'
         time = '24h'
         module = 'bioinfo/kraken2/2.1.1'
-    }
-    withName: extract_kraken {
-        cpus = '2'
-        time = '4h'
-        module = 'system/python/3.8.12'
     }
 
     withName: quast {
@@ -92,12 +87,6 @@ process {
       container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
     }
 
-    withName: compile_amrfinder {
-        cpus = '2'
-        time = '4h'
-        module = 'system/python/3.8.12'
-    }
-
     withName: card_rgi {
       cpus = '2'
       time = '24h'
@@ -114,12 +103,6 @@ process {
       cpus = '2'
       time = '4h'
       container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
-    }
-
-    withName: compile_plasmidfinder {
-        cpus = '2'
-        time = '4h'
-        module = 'system/python/3.8.12'
     }
 
     withName: platon {
@@ -143,7 +126,6 @@ process {
     withName: bakta {
       cpus = '2'
       time = '24h'
-  //    module = 'system/Miniconda3/1.0'
       container = 'docker://quay.io/biocontainers/bakta:1.4.0--pyhdfd78af_1'
     }
 
@@ -163,7 +145,12 @@ process {
       cpus = '4'
       time = '24h'
       module = 'bioinfo/roary/3.12.0'
-    //  container = 'docker://sangerpathogens/roary:trusty'
+    }
+
+    withLabel: python3 {
+      cpus = '1'
+      time = '24h'
+      container = 'system/python/3.8.12'
     }
 
 
