--- a/conf/singu.config
+++ b/conf/singu.config
@@ -32,7 +32,7 @@ process {
     withName: unicycler {
         cpus = '8'
         memory = '4g'
-        time = '24h'
+        time = '48h'
         container = 'docker://quay.io/biocontainers/unicycler:0.5.0--py310hc8f18ef_2'
     }
 
@@ -40,11 +40,6 @@ process {
         cpus = '4'
         time = '24h'
         container = 'docker://quay.io/biocontainers/kraken2:2.1.2--pl5321h7d875b9_1'
-    }
-    withName: extract_kraken {
-        cpus = '2'
-        time = '4h'
-  //      module = 'system/python/3.8.12'
     }
 
     withName: quast {
@@ -140,5 +135,13 @@ process {
       time = '24h'
       container = 'docker://sangerpathogens/roary:trusty'
     }
+
+    withLabel: python3 {
+      cpus = '1'
+      time = '24h'
+      container = 'docker://python:3.9.6-bullseye'
+    }
+
+
 
 }
