--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,14 @@
+// General info
 manifest {
-  mainScript = 'main.nf'
+    name = 'nf-wgs-amr'
+    author = 'Juliette Hayer'
+    homePage = 'https://github.com/jhayer/nf-wgs_amr'
+    description = 'Workflow for analysis of Bacteria Whole Genome Sequencing (WGS) data with AntiMicrobial Resistance (AMR) focus'
+    nextflowVersion = '>=22.04.0'
+    version = '0.1'
+    mainScript = 'main.nf'
 }
+
 
 // default parameters
 params {
