--- a/conf/itrop.config
+++ b/conf/itrop.config
@@ -11,104 +11,52 @@ singularity {
 process {
     executor = 'slurm'
 
-    withName: fastp {
-        cpus = '4'
-        time = '4h'
-        module = 'bioinfo/fastp/0.20.1'
-    }
-    withName: fastp_hybrid {
-        cpus = '4'
-        time = '4h'
-        module = 'bioinfo/fastp/0.20.1'
+    withName: agat {
+      cpus = '1'
+      time = '4h'
+      container = 'docker://quay.io/biocontainers/agat:1.0.0--pl5321hdfd78af_0'
     }
 
-    withName: spades {
-        cpus = '8'
-        memory = '4g'
-        time = '24h'
-        module = 'bioinfo/SPAdes/3.14.1'
+    withLabel: amrfinderplus {
+      cpus = '2'
+      time = '24h'
+      container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
     }
-    withName: unicycler {
-        cpus = '8'
-        memory = '4g'
-        time = '96h'
-        module = 'bioinfo/unicycler/0.4.4:bioinfo/racon/1.4.3'
+
+    withName: bakta {
+      cpus = '2'
+      time = '24h'
+      container = 'docker://oschwengers/bakta:v1.6.0'
+    }
+
+    withLabel: busco {
+        cpus = '2'
+        time = '24h'
+        container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
+    }
+
+    withLabel: card {
+      cpus = '2'
+      time = '24h'
+      container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
+    }
+
+    withName: emblmygff3 {
+      cpus = '1'
+      time = '4h'
+      container = 'docker://quay.io/biocontainers/emblmygff3:2.2--pyhdfd78af_1'
+    }
+
+    withLabel: fastp {
+        cpus = '4'
+        time = '4h'
+        module = 'bioinfo/fastp/0.20.1'
     }
 
     withName: kraken2nt_contigs {
         cpus = '4'
         time = '24h'
         module = 'bioinfo/kraken2/2.1.1'
-    }
-
-    withName: quast {
-        cpus = '4'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
-    }
-    withName: quast_contigs_only {
-        cpus = '4'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
-    }
-    withName: quast_hybrid {
-        cpus = '4'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
-    }
-
-    withName: busco {
-        cpus = '2'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
-    }
-
-    withName: busco_auto_prok {
-        cpus = '2'
-        time = '24h'
-        container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
-    }
-
-    withName: mash {
-      cpus = '2'
-      time = '24h'
-      module = 'bioinfo/mash/2.2'
-    }
-
-    withName: amrfinderplus {
-      cpus = '2'
-      time = '24h'
-      container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
-    }
-
-    withName: amrfinderplus_no_species {
-      cpus = '2'
-      time = '24h'
-      container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
-    }
-
-    withName: card_rgi {
-      cpus = '2'
-      time = '24h'
-      container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
-    }
-
-    withName: compile_card {
-      cpus = '2'
-      time = '4h'
-      container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
-    }
-
-    withName: plasmidfinder {
-      cpus = '2'
-      time = '4h'
-      container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
-    }
-
-    withName: platon {
-      cpus = '2'
-      time = '4h'
-      container = 'docker://quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
     }
 
     withName: mefinder {
@@ -123,16 +71,16 @@ process {
       container = 'docker://quay.io/biocontainers/mlst:2.22.0--hdfd78af_0'
     }
 
-    withName: bakta {
+    withName: plasmidfinder {
       cpus = '2'
-      time = '24h'
-      container = 'docker://quay.io/biocontainers/bakta:1.4.0--pyhdfd78af_1'
+      time = '4h'
+      container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
     }
 
-    withName: bakta {
+    withName: platon {
       cpus = '2'
-      time = '24h'
-      container = 'docker://oschwengers/bakta:v1.6.0'
+      time = '4h'
+      container = 'docker://quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
     }
 
     withName: prokka {
@@ -141,17 +89,36 @@ process {
       container = 'docker://quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
     }
 
+    withLabel: python3 {
+      cpus = '1'
+      time = '24h'
+      module = 'system/python/3.8.12'
+    }
+
+    withLabel: quast {
+        cpus = '4'
+        time = '24h'
+        container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
+    }
+
     withName: roary {
       cpus = '4'
       time = '24h'
       module = 'bioinfo/roary/3.12.0'
     }
 
-    withLabel: python3 {
-      cpus = '1'
-      time = '24h'
-      container = 'system/python/3.8.12'
+    withName: spades {
+        cpus = '8'
+        memory = '4g'
+        time = '24h'
+        module = 'bioinfo/SPAdes/3.14.1'
     }
 
+    withName: unicycler {
+        cpus = '8'
+        memory = '4g'
+        time = '96h'
+        module = 'bioinfo/unicycler/0.4.4:bioinfo/racon/1.4.3'
+    }
 
 }
