fixed biopython container for python3 processes

--- a/conf/singu.config
+++ b/conf/singu.config
@@ -13,7 +13,6 @@ process {
     withName: extract_kraken {
         cpus = '2'
         time = '4h'
-  //      module = 'system/python/3.8.12'
     }
 
     withName: agat {
@@ -52,13 +51,7 @@ process {
       container = 'docker://quay.io/biocontainers/emblmygff3:2.2--pyhdfd78af_1'
     }
 
-    withName: fastp {
-        cpus = '4'
-        time = '4h'
-        container = 'docker://quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
-    }
-
-    withName: fastp_hybrid {
+    withLabel: fastp {
         cpus = '4'
         time = '4h'
         container = 'docker://quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
@@ -103,7 +96,7 @@ process {
     withLabel: python3 {
       cpus = '1'
       time = '24h'
-      container = 'docker://python:3.9.6-bullseye'
+      container = 'docker://biocontainers/biopython:v1.73dfsg-1-deb-py3_cv1'
     }
 
     withLabel: quast {
