changed kraken db name, reorganised help, removed KrakenTools script in params as it is now in bin

--- a/nextflow.config
+++ b/nextflow.config
@@ -9,7 +9,6 @@ manifest {
     mainScript = 'main.nf'
 }
 
-
 // default parameters
 params {
     cpus = "2"
@@ -17,27 +16,20 @@ params {
     help = false
     profile = false
 
-    // Inputs
-//    illumina = './illumina'
-//    contigs = './contigs'
-
     // phred
     phred_type = '33'
 
     // Databases
-    k2nt_db = ''
-    params.bakta_db = ''
     card_db = ''
-    amrfinder_db = ''
+    kraken2_db = ''
     plasmidfinder_db = ''
+    // Optional DBs
+    amrfinder_db = ''
+    params.bakta_db = ''
     platon_db = ''
-    mash_dataset = ''
 
     //species Options
     busco_lineage = null
-
-    // tools
-    krakentools_extract = ''
 
     // Output
     output = './results'
