--- a/conf/singu.config
+++ b/conf/singu.config
@@ -15,113 +15,101 @@ process {
         time = '4h'
     }
 
-    withName: agat {
-      cpus = '1'
-      time = '4h'
-      container = 'docker://quay.io/biocontainers/agat:1.0.0--pl5321hdfd78af_0'
-    }
-
     withLabel: amrfinderplus {
       cpus = '2'
       time = '24h'
-      container = 'docker://quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
+      container = 'quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
     }
 
     withName: bakta {
       cpus = '2'
       time = '24h'
-      container = 'docker://oschwengers/bakta:v1.6.0'
+      container = 'oschwengers/bakta:v1.6.0'
     }
 
     withLabel: busco {
         cpus = '2'
         time = '24h'
-        container = 'docker://quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
+        container = 'quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
     }
 
     withLabel: card {
       cpus = '2'
       time = '24h'
-      container = 'docker://quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
-    }
-
-    withName: emblmygff3 {
-      cpus = '1'
-      time = '4h'
-      container = 'docker://quay.io/biocontainers/emblmygff3:2.2--pyhdfd78af_1'
+      container = 'quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
     }
 
     withLabel: fastp {
         cpus = '4'
         time = '4h'
-        container = 'docker://quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
+        container = 'quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
     }
 
     withName: kraken2nt_contigs {
         cpus = '4'
         time = '24h'
-        container = 'docker://quay.io/biocontainers/kraken2:2.1.2--pl5321h7d875b9_1'
+        container = 'quay.io/biocontainers/kraken2:2.1.2--pl5321h7d875b9_1'
     }
 
     withName: mefinder {
       cpus = '2'
       time = '4h'
-      container = 'docker://mkhj/mobile_element_finder:1.0.3'
+      container = 'mkhj/mobile_element_finder:1.0.3'
     }
 
     withName: mlst {
       cpus = '2'
       time = '24h'
-      container = 'docker://quay.io/biocontainers/mlst:2.22.0--hdfd78af_0'
+      container = 'quay.io/biocontainers/mlst:2.22.0--hdfd78af_0'
     }
 
     withName: plasmidfinder {
       cpus = '2'
       time = '4h'
-      container = 'docker://quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
+      container = 'quay.io/biocontainers/plasmidfinder:2.1.6--hdfd78af_0'
     }
 
     withName: platon {
       cpus = '2'
       time = '4h'
-      container = 'docker://quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
+      container = 'quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
     }
 
     withName: prokka {
       cpus = '2'
       time = '24h'
-      container = 'docker://quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
+      container = 'quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
     }
 
     withLabel: python3 {
       cpus = '1'
       time = '24h'
-      container = 'docker://biocontainers/biopython:v1.73dfsg-1-deb-py3_cv1'
+      container = 'biocontainers/biopython:v1.73dfsg-1-deb-py3_cv1'
     }
 
     withLabel: quast {
         cpus = '4'
         time = '24h'
-        container = 'docker://quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
+        container = 'quay.io/biocontainers/quast:5.0.2--py27pl5321h8f2a353_7'
     }
 
     withName: roary {
       cpus = '4'
       time = '24h'
-      container = 'docker://sangerpathogens/roary:trusty'
+      container = 'sangerpathogens/roary:trusty'
     }
 
     withName: spades {
         cpus = '8'
         memory = '4g'
         time = '24h'
-        container = 'docker://quay.io/biocontainers/spades:3.15.5--h95f258a_1'
+        container = 'quay.io/biocontainers/spades:3.15.5--h95f258a_1'
     }
 
     withName: unicycler {
         cpus = '8'
         memory = '4g'
         time = '48h'
-        container = 'docker://quay.io/biocontainers/unicycler:0.5.0--py310hc8f18ef_2'
+        container = 'quay.io/biocontainers/unicycler:0.5.0--py310hc8f18ef_2'
     }
 }
