changing config for containers - to test

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,8 @@
 // General info
 manifest {
-    name = 'nf-wgs-amr'
+    name = 'baargin'
     author = 'Juliette Hayer'
-    homePage = 'https://github.com/jhayer/nf-wgs_amr'
+    homePage = 'https://github.com/jhayer/baargin'
     description = 'Workflow for analysis of Bacteria Whole Genome Sequencing (WGS) data with AntiMicrobial Resistance (AMR) focus'
     nextflowVersion = '>=22.04.0'
     version = '0.1'
@@ -20,9 +20,11 @@ params {
     phred_type = '33'
 
     // Databases
-    card_db = ''
-    kraken2_db = ''
-    plasmidfinder_db = ''
+    //provided with download_db.py script
+    card_db = "$baseDir/db/card/card.json"
+    kraken2_db = "$baseDir/db/kraken2_mini/mini_std_4G"
+    plasmidfinder_db = "$baseDir/db/kraken2_mini/mini_std_4G"
+    
     // Optional DBs
     amrfinder_db = ''
     params.bakta_db = ''
@@ -39,10 +41,25 @@ params {
 profiles {
     //executer
     itrop {
+        executor {
+            name = 'slurm'
+        }
+        singularity.enabled = true
         includeConfig 'conf/itrop.config'
     }
-    singu {
-        includeConfig 'conf/singu.config'
+    singularity {
+        singularity.enabled = true
+        includeConfig "$baseDir/conf/containers.config"
+    }
+    slurm {
+        executor {
+            name = 'slurm'
+        }
+    }
+    docker {
+        docker.enabled = true
+        includeConfig "$baseDir/conf/containers.config"
+        docker.runOptions='-u "$( id -u ):$( id -g )"'
     }
 
 }
