config local container ok

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,8 +23,8 @@ params {
     //provided with download_db.py script
     card_db = "$baseDir/db/card/card.json"
     kraken2_db = "$baseDir/db/kraken2_mini/mini_std_4G"
-    plasmidfinder_db = "$baseDir/db/kraken2_mini/mini_std_4G"
-    
+    plasmidfinder_db = "$baseDir/db/plasmidfinder"
+
     // Optional DBs
     amrfinder_db = ''
     params.bakta_db = ''
@@ -39,27 +39,31 @@ params {
 }
 
 profiles {
-    //executer
+
+    docker {
+        docker.enabled = true
+        includeConfig "$baseDir/conf/containers.config"
+        docker.runOptions='-u "$( id -u ):$( id -g )"'
+    }
     itrop {
         executor {
             name = 'slurm'
         }
         singularity.enabled = true
-        includeConfig 'conf/itrop.config'
+        includeConfig "$baseDir/conf/itrop.config"
     }
     singularity {
         singularity.enabled = true
         includeConfig "$baseDir/conf/containers.config"
+    }
+    local{
+        executor {
+            name = 'local'
+        }
     }
     slurm {
         executor {
             name = 'slurm'
         }
     }
-    docker {
-        docker.enabled = true
-        includeConfig "$baseDir/conf/containers.config"
-        docker.runOptions='-u "$( id -u ):$( id -g )"'
-    }
-
 }
