fixed container conf label bakta and prokka

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -7,7 +7,7 @@ process {
       container = 'quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
     }
 
-    withName: bakta {
+    withLabel: bakta {
       cpus = '2'
       time = '24h'
       container = 'oschwengers/bakta:v1.6.0'
@@ -61,7 +61,7 @@ process {
       container = 'quay.io/biocontainers/platon:1.6--pyhdfd78af_1'
     }
 
-    withName: prokka {
+    withLabel: prokka {
       cpus = '2'
       time = '24h'
       container = 'quay.io/biocontainers/prokka:1.14.6--pl5321hdfd78af_4'
