create base config for time and cpus

--- a/nextflow.config
+++ b/nextflow.config
@@ -38,6 +38,9 @@ params {
     tmpdir = './tmpdir'
 }
 
+// Load base.config by default for all pipelines
+includeConfig 'conf/base.config'
+
 profiles {
 
     docker {
