--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,12 @@
 *.tar.gz
 *.rar
 
+# nextflow-related ignores
+/work
+/.nextflow*
+/db
+/results_test
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
