--- a/.gitignore
+++ b/.gitignore
@@ -20,10 +20,10 @@
 *.rar
 
 # nextflow-related ignores
-/work
-/.nextflow*
-/db
-/results_test
+work
+.nextflow*
+db
+results_test
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
