set empty default values for params to avoid warnings

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,13 @@ params {
     // phred
     phred_type = '33'
 
+    //Reads and contigs params
+    reads_folder=''
+    contigs=''
+    genus=''
+    species=''
+    amrfinder_organism=''
+
     // Databases
     //provided with download_db.py script
     card_db = "$baseDir/db/card/card.json"
@@ -29,6 +36,7 @@ params {
     amrfinder_db = ''
     params.bakta_db = ''
     platon_db = ''
+    busco_db_offline=''
 
     //species Options
     busco_lineage = null
