add test profile and fixed include base.config

--- a/nextflow.config
+++ b/nextflow.config
@@ -11,8 +11,6 @@ manifest {
 
 // default parameters
 params {
-    cpus = "2"
-    memory = "16g"
     help = false
     profile = false
 
@@ -53,6 +51,7 @@ profiles {
 
     docker {
         docker.enabled = true
+        includeConfig "$baseDir/conf/base.config"
         includeConfig "$baseDir/conf/containers.config"
         docker.runOptions='-u "$( id -u ):$( id -g )"'
     }
@@ -65,6 +64,7 @@ profiles {
     }
     singularity {
         singularity.enabled = true
+        includeConfig "$baseDir/conf/base.config"
         includeConfig "$baseDir/conf/containers.config"
     }
     local{
@@ -77,4 +77,14 @@ profiles {
             name = 'slurm'
         }
     }
+    test {
+        params.contigs = "$baseDir/test/input/contigs"
+        params.genus = 'Escherichia'
+        params.species = 'coli'
+        params.species_taxid = 562
+        params.busco_lineage = 'enterobacterales_odb10'
+        params.output = './results_test' 
+    }
 }
+
+
