update some containers

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -2,11 +2,11 @@
 process {
 
     withLabel: amrfinderplus {
-      container = 'quay.io/biocontainers/ncbi-amrfinderplus:3.10.45--h6e70893_0'
+      container = 'quay.io/staphb/ncbi-amrfinderplus:3.11.20-2023-09-26.1'
     }
 
     withLabel: bakta {
-      container = 'oschwengers/bakta:v1.6.0'
+      container = 'oschwengers/bakta:v1.8.1'
     }
 
     withLabel: busco {
