--- a/nextflow.config
+++ b/nextflow.config
@@ -26,9 +26,9 @@ params {
 
     // Databases
     //provided with download_db.py script
-    card_db = "$baseDir/db/card/card.json"
-    kraken2_db = "$baseDir/db/kraken2_mini/mini_std_4G"
-    plasmidfinder_db = "$baseDir/db/plasmidfinder"
+    card_db = "$projectDir/db/card/card.json"
+    kraken2_db = "$projectDir/db/kraken2_mini/mini_std_4G"
+    plasmidfinder_db = "$projectDir/db/plasmidfinder"
 
     // Optional DBs
     amrfinder_db = ''
@@ -51,8 +51,8 @@ profiles {
 
     docker {
         docker.enabled = true
-        includeConfig "$baseDir/conf/base.config"
-        includeConfig "$baseDir/conf/containers.config"
+        includeConfig "$projectDir/conf/base.config"
+        includeConfig "$projectDir/conf/containers.config"
         docker.runOptions='-u "$( id -u ):$( id -g )"'
     }
     itrop {
@@ -60,12 +60,12 @@ profiles {
             name = 'slurm'
         }
         singularity.enabled = true
-        includeConfig "$baseDir/conf/itrop.config"
+        includeConfig "$projectDir/conf/itrop.config"
     }
     singularity {
         singularity.enabled = true
-        includeConfig "$baseDir/conf/base.config"
-        includeConfig "$baseDir/conf/containers.config"
+        includeConfig "$projectDir/conf/base.config"
+        includeConfig "$projectDir/conf/containers.config"
     }
     local{
         executor {
@@ -78,7 +78,7 @@ profiles {
         }
     }
     test {
-        params.contigs = "$baseDir/test/input/contigs"
+        params.contigs = "$projectDir/test/input/contigs"
         params.genus = 'Escherichia'
         params.species = 'coli'
         params.species_taxid = 562
