adding min cov and identity params for amrfinderplus

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,6 +23,8 @@ params {
     genus=''
     species=''
     amrfinder_organism=''
+    amr_id_min='0.90'
+    amr_cov_min='0.60'
 
     // Databases
     //provided with download_db.py script
