updated versions for containers and DB of CARD RGI, and AMRFinderPlus

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -2,7 +2,7 @@
 process {
 
     withLabel: amrfinderplus {
-      container = 'quay.io/staphb/ncbi-amrfinderplus:3.11.20-2023-09-26.1'
+      container = 'quay.io/biocontainers/ncbi-amrfinderplus:3.12.8--h283d18e_0'
     }
 
     withLabel: bakta {
@@ -14,7 +14,7 @@ process {
     }
 
     withLabel: card {
-      container = 'quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
+      container = 'quay.io/biocontainers/rgi:6.0.3--pyha8f3691_1'
     }
 
     withLabel: fastp {
