add roary_plots after roary to get nicer pangenome plots

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -21,6 +21,10 @@ process {
         container = 'quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
     }
 
+    withLabel: fasttree {
+        container = 'quay.io/biocontainers/fasttree:2.1.11--h031d066_3'
+    }
+
     withName: kraken2nt_contigs {
         container = 'quay.io/biocontainers/kraken2:2.1.2--pl5321h7d875b9_1'
     }
@@ -55,6 +59,10 @@ process {
 
     withName: roary {
       container = 'sangerpathogens/roary:trusty'
+    }
+    
+    withLabel: roary_plots {
+      container = 'oras://community.wave.seqera.io/library/biopython_pandas_python_seaborn_pruned:c9c98aa4d8cab3ef'
     }
 
     withName: spades {
