add antierior functional version for card heatmap, add missing base configs

--- a/conf/base.config
+++ b/conf/base.config
@@ -7,7 +7,7 @@ process {
     }
 
     withLabel: bakta {
-      cpus = '2'
+      cpus = '4'
       time = '24h'
     }
 
@@ -19,6 +19,11 @@ process {
     withLabel: card {
       cpus = '2'
       time = '24h'
+    }
+
+    withLabel: card_hm {
+      cpus = '2'
+      time = '12h'
     }
 
     withLabel: fastp {
@@ -69,6 +74,16 @@ process {
     withName: roary {
       cpus = '4'
       time = '24h'
+    }
+
+    withName: roary_fasstree {
+      cpus = '8'
+      time = '24h'
+    }
+
+    withName: roary_plots {
+      cpus = '2'
+      time = '8h'
     }
 
     withName: spades {
