--- a/conf/containers.config
+++ b/conf/containers.config
@@ -17,6 +17,10 @@ process {
       container = 'quay.io/biocontainers/rgi:6.0.3--pyha8f3691_1'
     }
 
+    withLabel: card_hm {
+      container = 'quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
+    }
+
     withLabel: fastp {
         container = 'quay.io/biocontainers/fastp:0.23.2--h5f740d0_3'
     }
@@ -62,7 +66,8 @@ process {
     }
     
     withLabel: roary_plots {
-      container = 'oras://community.wave.seqera.io/library/biopython_pandas_python_seaborn_pruned:c9c98aa4d8cab3ef'
+    //  container = 'oras://community.wave.seqera.io/library/biopython_pandas_python_seaborn_pruned:c9c98aa4d8cab3ef'
+      container = 'community.wave.seqera.io/library/biopython_pandas_python_seaborn_pruned:e82daa13d0c3557a'
     }
 
     withName: spades {
