afix fasttree config

--- a/conf/base.config
+++ b/conf/base.config
@@ -76,7 +76,7 @@ process {
       time = '24h'
     }
 
-    withName: roary_fasstree {
+    withLabel: fasttree {
       cpus = '8'
       time = '24h'
     }
