updated container AF,bakta,busco,roary,unicycler ; and cpus

--- a/conf/containers.config
+++ b/conf/containers.config
@@ -2,23 +2,24 @@
 process {
 
     withLabel: amrfinderplus {
-      container = 'quay.io/biocontainers/ncbi-amrfinderplus:3.12.8--h283d18e_0'
+      container = 'quay.io/biocontainers/ncbi-amrfinderplus:4.0.19--hf69ffd2_0'
     }
 
     withLabel: bakta {
-      container = 'oschwengers/bakta:v1.8.1'
+       container = 'quay.io/biocontainers/bakta:1.11.4--pyhdfd78af_0'
     }
 
     withLabel: busco {
         container = 'quay.io/biocontainers/busco:5.3.2--pyhdfd78af_0'
+//	container = 'quay.io/biocontainers/busco:6.0.0--pyhdfd78af_1'
     }
 
     withLabel: card {
-      container = 'quay.io/biocontainers/rgi:6.0.3--pyha8f3691_1'
+      container = 'quay.io/biocontainers/rgi:6.0.5--pyh05cac1d_0'
     }
 
     withLabel: card_hm {
-      container = 'quay.io/biocontainers/rgi:6.0.0--pyha8f3691_0'
+      container = 'quay.io/biocontainers/rgi:6.0.5--pyh05cac1d_0'
     }
 
     withLabel: fastp {
@@ -62,11 +63,10 @@ process {
     }
 
     withName: roary {
-      container = 'sangerpathogens/roary:trusty'
-    }
+      container = 'quay.io/biocontainers/roary:3.13.0--pl526h516909a_0' 
+   }
     
     withLabel: roary_plots {
-    //  container = 'oras://community.wave.seqera.io/library/biopython_pandas_python_seaborn_pruned:c9c98aa4d8cab3ef'
       container = 'community.wave.seqera.io/library/biopython_pandas_python_seaborn_pruned:e82daa13d0c3557a'
     }
 
@@ -75,6 +75,7 @@ process {
     }
 
     withName: unicycler {
-        container = 'quay.io/biocontainers/unicycler:0.5.0--py310hc8f18ef_2'
+      //  container = 'quay.io/biocontainers/unicycler:0.5.0--py310hc8f18ef_2'
+       container = 'quay.io/biocontainers/unicycler:0.5.1--py312hdcc493e_5'
     }
 }
